cabal-version:      3.4
name:               advent-of-code2023
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             cando
maintainer:         stefano.candori@prima.it
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable advent-of-code2023
    import:           warnings
    main-is:          Main.hs
    other-modules:    Day1, Day2
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0, megaparsec
    hs-source-dirs:   app
    default-language: GHC2021
