cabal-version:      3.4
name:               advent-of-code2023
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             cando
maintainer:         stefano.candori@prima.it
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable advent-of-code2023
    import:           warnings
    main-is:          Main.hs
    other-modules:    Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11, Day12
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0, megaparsec, matrix, containers, extra, split, deepseq, vector
    hs-source-dirs:   app
    default-language: GHC2021

-- executable advent-of-code2023-profiling
--     import:           warnings
--     main-is:          Main.hs
--     other-modules:    Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8
--     -- other-extensions:
--     build-depends:    base ^>=4.17.2.0, megaparsec, matrix, containers, extra, split
--     hs-source-dirs:   app
--     default-language: GHC2021
--     ghc-options:
--         -O2
--         -threaded
--         -fprof-auto
--         "-with-rtsopts=-N -p -s -hc"
